fixed switch appearance on Safari, scaling animation on Safari and flickering issue on Safari

--- a/src/styles/orangeBox.css
+++ b/src/styles/orangeBox.css
@@ -23,14 +23,14 @@
 
 @keyframes orange-box {
     0% {
-        transform: scale(0%, 0%);
+        transform: scale(0, 0);
         opacity: 0;
     }
     15% {
         opacity: 1;
     }
     100% {
-        transform: scale(200%, 200%);
+        transform: scale(2, 2);
     }
 }
 
