--- a/src/styles/switch.css
+++ b/src/styles/switch.css
@@ -14,6 +14,8 @@
 
 .switch input {
     appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
     width: var(--width);
     height: var(--height);
     background-color: hsl(var(--btn-clr));
